--- a/templates/base.html
+++ b/templates/base.html
@@ -1,17 +1,15 @@
 <html>
-    {% load static %}
-    <head>
-        
+    <head> 
+        {% load static %}
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>JZ Insta</title>
+        <title>Marinda Insta</title>
         <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
         <link href="{% static 'vendor/font-awesome-4.6.3/css/font-awesome.min.css' %}" rel="stylesheet">
         <link href="{% static 'css/style.css' %}" rel="stylesheet">
     </head>
     <body>
-
-        
+        {% load static %}
         {% include 'header.html' %}
         
         <div class="content-wrapper">
@@ -31,4 +29,3 @@
 
     </body>
 </html>
-    
