--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% load custom_tags %}
 
@@ -13,14 +13,14 @@
                     <div class="poster__info">
                         <a href="{% url 'user_detail' post.author.id %}" class="poster__name">
                             {% if post.author.profile_pic %}
-                                <img class="poster__profilepic" src="/{{ post.author.profile_pic.url }}">
+                                <img class="poster__profilepic" src="/{{ post.author.profile_pic }}">
                             {% endif %}
                             {{ post.author.username }}
                         </a>
                     </div>
                 </div>
                 <a href="{% url 'post_detail' post.pk %}">
-                    <img class="card__main-image" src="{{ post.image }}">
+                    <img class="card__main-image" src="/{{ post.image }}">
                 </a>
                 <div class="card__panel-body">
                     <div class="likes">
