--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% load custom_tags %}
 
@@ -28,7 +28,7 @@
             </div>
 
             <section class="input-row">
-                <i class="fa {% has_user_liked_post object user %} submit-like" aria-hidden="true"></i>
+                <i class="fa {% has_user_liked_post post user %} submit-like" aria-hidden="true"></i>
             </section>
         </div>
     </div>
