--- a/templates/post_update.html
+++ b/templates/post_update.html
@@ -1,6 +1,7 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block content %}
+
 <h1>Edit Post</h1>
 
 <form action="" method="post" enctype="multipart/form-data">
