--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,9 +1,10 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block content %}
-<h1>Sign Up</h1>
 
-<form method="post" enctype="multipart/form-data">
+<h2>Sign Up</h2>
+
+<form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %} 
     {{ form.as_p }}  
     <button type="submit"> Sign up</button>
