--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -49,7 +49,7 @@
         {% for post in object.my_posts.all %}
             <div class="col-xs-4">
                 <div class="picture-square" style="background-image: url(http://{{ request.META.HTTP_HOST }}/{{ post.image.url }}); background-size: contain;">
-                    <a href="{% url 'post' post.pk %}">
+                    <a href="{% url 'post_detail' post.pk %}">
                     <div class="content">
                         <i class="fa fa-heart" aria-hidden="true"></i> {{ post.get_like_count }}
                     </div>
